Fixing Readme and proto/port in template that wasn't a variable

--- a/photon_snmp/templates/etc/snmpd.j2
+++ b/photon_snmp/templates/etc/snmpd.j2
@@ -1,7 +1,7 @@
 ################################################################################
 # AGENT BEHAVIOUR
 
-agentaddress udp:161
+agentaddress {{ snmp_Proto }}:{{ snmp_Port }}
 
 ################################################################################
 # ACCESS CONTROL
