Adding SELinux bool and PHP configuration to allow automatic Wordpress Updates to work correctly.

--- a/wordpress/templates/wp-config.j2
+++ b/wordpress/templates/wp-config.j2
@@ -5,6 +5,7 @@ define('DB_PASSWORD', '{{ db_pass }}');
 define('DB_HOST', 'localhost');
 define('DB_CHARSET', 'utf8');
 define('DB_COLLATE', '');
+define('FS_METHOD', 'direct');
 
 define('AUTH_KEY',         '{{ wp_salt_phrase }}');
 define('SECURE_AUTH_KEY',  '{{ wp_salt_phrase }}');
